fix: fix alignment on style page

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ button{
     color: #1F2937;
     font-size: 36px;
     font-weight: 700;
+    margin: 48px;
 }
 
 /* bundle of image and text */
@@ -114,6 +115,6 @@ button{
 }
 
 .text{
-    font-size: 18px;
+    font-size: 10px;
     color: #1F2937;
 }
